--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
+    "@xkeshi/image-compressor": "^0.5.3",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cropperjs": "^1.5.11",
+    "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-upload-component": "^2.8.22",
+    "vuetify": "^2.4.0",
+    "vuetify-upload-button": "^2.0.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -22,6 +30,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "typescript": "~4.1.5",
+    "vue-cli-plugin-vuetify": "~2.3.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
