--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-ellipse-progress": "^1.3.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
