--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "vue-ellipse-progress": "^1.3.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-social-sharing": "^3.0.7",
+    "vue-web-cam": "^1.9.0",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0",
-    "vuex-module-decorator": "^0.1.1"
+    "vuex": "^3.6.2",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
