--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.11",
+    "flipbook-vue": "^0.10.2",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-ellipse-progress": "^1.3.0",
+    "vue-freeze-gif": "^0.1.7",
+    "vue-image-painter": "^0.1.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue-social-sharing": "^3.0.7",
